# News_Automation

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
astro-site/: astro.config.mjs  package-lock.json  package.json
astro-site/src/components/: ArticleCard.astro  TopicCard.astro  footer.astro
astro-site/src/components/navbar/: navbar.astro
astro-site/src/content/: config.ts
astro-site/src/content/articles/: 2026-01-27-ai-supported-vulnerability-triage-with-the-github.md  2026-01-27-alyah-toward-robust-evaluation-of-emirati-dialect.md  2026-01-27-apache-iceberg-and-the-catalog-layer.md  2026-01-27-assetopsbench-bridging-the-gap-between-ai-agent-be.md  2026-01-27-build-an-agent-into-any-app-with-the-github-copilo.md  2026-01-27-closing-the-context-gap-cribls-blueprint-for-trust.md  2026-01-27-context-windows-plan-agent-and-tdd-what-i-learned.md  2026-01-27-dagster-snowflake-building-production-ai-pipelines.md  (+2716 more)
astro-site/src/layouts/: Layout.astro
astro-site/src/pages/: archive.astro  index.astro
astro-site/src/styles/: global.css
config/: curation.yaml  sources.yaml
docs/: index.md
docs/about/: sources.md  topics.md
docs/assets/: extra.css
docs/daily/: 2026-01-27.md  EXAMPLE.md  index.md
prompts/: blog_prompt.md  digest_prompt.md
src/: __init__.py  astro_renderer.py  collector.py  curator.py  gemini_adapter.py  main.py  models.py  notifier.py  reader.py  renderer.py  synthesizer.py
tests/: conftest.py  test_collector.py  test_curator.py  test_reader.py  test_renderer.py
(+182 files in other folders)
